# Fireboy-and-Watergirl

./: CMakeLists.txt  Evaluation.docx  README.md  Specification_v2.docx
Resources/LOL/: Fireboy_Running.psd  Fireboy_Static.psd  Watergirl_Running.psd  Watergirl_Static.psd
src/: character.cxx  character.hxx  controller.cxx  controller.hxx  game_config.cxx  game_config.hxx  level_layout.cxx  level_layout.hxx  main.cxx  model.cxx  model.hxx  trap_door.cxx  trap_door.hxx  view.cxx  view.hxx
test/: model_test.cxx
